prevent buttons in panel from overlapping

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -140,6 +140,7 @@
 .filters{
     padding-left: 10px;
     padding-right: 10px;
+    padding-bottom: 40px;
 }
 #comparator .form-control{
     border-width: 2px;
